[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["Egor <egorkononec64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
loguru = "^0.7.2"
httpx = "^0.27.0"
uvicorn = "^0.30.5"
faker = "^26.1.0"
python-dotenv = "^1.0.1"


[tool.poetry.scripts]
test = "main:start_test"
dev = "main:start_dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
